--- a/docs/sowon.6
+++ b/docs/sowon.6
@@ -26,16 +26,18 @@ exit the application when the countdown ends
 .Bl -tag -width indent
 .It SPACE
 Toggle pause
-.It =
+.It +
 Zoom in
 .It -
 Zoom out
 .It 0
 Zoom 100%
-.It F5
+.It r
 Restart
-.It F11
+.It f
 Fullscreen
+.It q
+Quit
 .Sh FILES
 .Pa /usr/local/bin/sowon
 .br
